# commit-gitdeps-xml-parser

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
src/: args.rs  blob.rs  dependency_manifest.rs  file.rs  main.rs  model.rs  pack.rs  parse.rs
src/model/: blob.rs  dependency_manifest.rs  file.rs  git_deps.rs  mod.rs  pack.rs  xml_header.rs
src/parser/: blob.rs  common.rs  dependency_manifest.rs  file.rs  hash.rs  mod.rs  pack.rs  xml_header.rs
