[package]
name = "commit-gitdeps-xml-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
clap = { version = "4.5.30", features = ["derive"] }
futures-util = "0.3.31"
nom = "8.0.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
    "stream",
] }
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tokio-util = "0.7.13"
